//$Id$

CCK 6.2-dev
===========

- #321024 Add content_associate_fields() to the content_check_update() function because it can get skipped when updates are aborted or the content module is not yet updated.
- Fix bad logic in testing content version variable to prevent warning messages before content module is updated.
- #300368 Add option on Display fields screen to omit fields or groups from the $content value passed to the node template.
- Get rid of t() around Views field label since Views already has it marked as a translatable option.
- #285470 by jhuckabee, store field label in the view in all cases, previously only custom labels were stored.
- #266309 by abbasmousavi, change silent fix to error message for invalid input into number fields.
- #318224 by brmassa, error in Content Copy handling of fieldgroups.
- #198508 Add messages to Manage fields screen about inactive fields.
- #320743 Revert group names uniqueness rules as per D5 behavior (group names unique only inside content types).
- #310219 followup : numeric (core) rendering modes were not preserved in some cases.
- Fix 'unknown index' warnings on fieldgroups settings pages.
- #320139 by Moonshine - Noderef / Userref: Fix single-quotes encoding in 'Views' mode with option widgets.
- #318143 by Douggreen - Panels integration: make widget label translatable.
- #321147 Views integration: float/decimal filters round values to integers.
- #321702 Views integration: fix rendering of multiple-values formatters.
- #322917 Upgrade path: Missing information text on update 6000 when content.module not enabled.
- Replaced theming instructions in theme/README.txt with advanced_help pages.
- #323436 by hass: fix a few strings + translation bugs.
- #323745 by robertgarrigos: Fix performance issue when submitting 'display fields' form.
- #298651 by smk-ka, yched - Nodereference/Userreference: Enhance performance on large sites.
  This also adds 'autocomplete mode' widget settings (full string / beginning of string).