@@ -11,7 +11,7 @@ fields and thus their own dedicated content types.</p>
 <p>At the bottom of the <strong>Manage fields</strong> page for a content type,
 you'll find this:</p>
 
-<img src="path:add-existing-field.png">
+<img src="&path&add-existing-field.png">
 
 <p>In order to add a new instance of an existing field to a content type, you
 need to provide the following information:</p>
