@@ -2,7 +2,7 @@
 <p>At the bottom of the <strong>Manage fields</strong> page for a content type,
 you'll find this:</p>
 
-<img src="path:add-new-field.png">
+<img src="&path&add-new-field.png">
 
 <p>In order to add a new field to a content type, you need to provide the
 following information:</p>
