@@ -4,13 +4,13 @@ by some sort of logic, for instance several text fields that hold the different
 parts of an 'Address'. On input forms and displayed content, the corresponding
 fields are enclosed inside an HTML fieldset.</p>
 
-<img style="vertical-align:top" src="path:group-node-edit-form.png">
-<img style="vertical-align:top" src="path:group-node-display.png">
+<img style="vertical-align:top" src="&path&group-node-edit-form.png">
+<img style="vertical-align:top" src="&path&group-node-display.png">
 
 <p>At the bottom of the <strong>Manage fields</strong> page for a content type,
 you'll find this:</p>
 
-<img src="path:add-new-group.png">
+<img src="&path&add-new-group.png">
 
 <p>In order to add a new group to a content type, you need to provide the
 following information:</p>
