@@ -2,7 +2,7 @@
 <p>The form elements at the bottom of the <strong>Manage fields</strong> page
 let you add fields and groups to your content types.</p>
 
-<img src="path:add-new.png">
+<img src="&path&add-new.png">
 
 <p style="font-size:smaller">(The <strong>Add existing field</strong> row is
 displayed only if there are fields available in other content types.
