@@ -4,6 +4,10 @@
 name = CCK
 index name = "CCK (Content Construction Kit)"
 
+[fields]
+title = Fields and Widgets
+weight = -10
+
 [manage-fields]
 title = 'Manage fields' tab
 
