@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <p>To change the order of fields, grab a drag-and-drop handle
-<img src="path:draggable.png"> and drag the field to a new location in the list
+<img src="&path&draggable.png"> and drag the field to a new location in the list
 (grab a handle by clicking and holding the mouse while hovering over a handle
 icon). Remember that your changes will not be saved until you click the
 <strong>Save</strong> button at the bottom of the page.</p>
@@ -16,10 +16,10 @@ move a field inside a group by dragging it below the row of the group, and
 then slightly to the right before dropping it. Note that groups can also be
 reordered, but can currently not be nested inside other groups.</p>
 
-<img src="path:drag-groups.png">
+<img src="&path&drag-groups.png">
 
 <p>When adding a field or a group, you can drag them directly to the
 intended spot in the list of fields and groups that are already present in your
 content type, before clicking <strong>Save</strong>:</p>
 
-<img src="path:drag-new.png">
+<img src="&path&drag-new.png">
