@@ -7,4 +7,4 @@ section.</p>
 <p>There are 3 levels where you can customize how the data in CCK fields
 is displayed in nodes:</p>
 
-<img src="path:theme.png" class="content-border">
+<img src="&path&theme.png" class="content-border">
