@@ -1,0 +1,8 @@
+; $Id$
+
+[overview]
+title = Overview
+
+[nodereference]
+title = Nodereference field
+parent = content%fields
