@@ -1,0 +1,3 @@
+<p>The Nodereference field stores the nid of a related node. The title of the related node is usually displayed as the value of this field.</p>
+<p>The Nodereference field can use an autocomplete widget, or, when used with <a href="&topic:optionwidgets/optionwidgets&">Optionwidgets</a>, the available values can be presented to the end user in a drop-down select list, checkboxes, or radios.</p>
+<p>A Nodereference field can be used in Views to create a <a href="&topic:views/relationship&">Relationship</a> to another node, to allow you to use any field, argument, or filter from the related node in your view. </p>
