@@ -1,0 +1,8 @@
+; $Id$
+
+[overview]
+title = Overview
+
+[number]
+title = Number field
+parent = content%fields
