@@ -1,0 +1,2 @@
+<p>The Number field stores numeric data in the database. It can either be an integer value, a decimal value, or a float value.</p>
+<p>The Number field provides a place for the administrator to create a list of 'Allowed values' for the field. When used with <a href="&topic:optionwidgets/optionwidgets&">Optionwidgets</a>, the allowed values are presented to the end user in a drop-down select list, checkboxes, or radios.</p>
