@@ -1,0 +1,12 @@
+; $Id$
+
+[advanced help settings]
+name = Optionwidgets
+index name = "Optionwidgets"
+
+[overview]
+title = Overview
+
+[optionwidgets]
+title = Optionwidgets
+parent = content%fields
