@@ -1,0 +1,2 @@
+<p>Optionwidgets creates drop-down select lists, checkboxes, and radio widgets that can be used with fields that have specific allowed values.</p>
+<p>The <a href="&topic:number/number&">Number</a> and <a href="&topic:text/text&">Text</a> fields have settings for creating lists of allowed values that can be used in Optionwidgets. The <a href="&topic:nodereference/nodereference&">Nodereference</a> and <a href="&topic:userreference/userreference&">Userreference</a> fields use Optionwidgets to present the possible values in select lists or checkboxes.</p>
