@@ -1,0 +1,1 @@
+<p>This module is one of the <a href="&topic:content/fields&">Content Construction Kit (CCK) Widget modules</a>.</p>
