@@ -1,0 +1,8 @@
+; $Id$
+
+[overview]
+title = Overview
+
+[text]
+title = Text field
+parent = content%fields
