@@ -1,0 +1,8 @@
+; $Id$
+
+[overview]
+title = Overview
+
+[userreference]
+title = Userreference field
+parent = content%fields
