@@ -1,0 +1,3 @@
+<p>The Userreference field stores the uid of a related user. The name of the related user is usually displayed as the value of this field.</p>
+<p>The Userreference field can use an autocomplete widget, or, when used with <a href="&topic:optionwidgets/optionwidgets&">Optionwidgets</a>, the available values can be presented to the end user in a drop-down select list, checkboxes, or radios.</p>
+<p>A Userreference field can be used in Views to create a <a href="&topic:views/relationship&">Relationship</a> to a user, to allow you to use any field, argument, or filter from the related user in your view. </p>
