@@ -3,6 +3,8 @@
 CCK 6.2-dev
 ===========
 
+- #324826 Change Advanced help path and topic to use & prefix per latest change in Advanced help.
+- #324610 Add Advanced help files for basic fields and hooks so they'll show up in the CCK advanced help documentation. Intended to be used as examples by other field modules for a way to add more field documentation.
 - #321024 Add content_associate_fields() to the content_check_update() function because it can get skipped when updates are aborted or the content module is not yet updated.
 - Fix bad logic in testing content version variable to prevent warning messages before content module is updated.
 - #300368 Add option on Display fields screen to omit fields or groups from the $content value passed to the node template.
